--- a/src/app/common/components/learningpath-detail/oeb-learning-path.component.html
+++ b/src/app/common/components/learningpath-detail/oeb-learning-path.component.html
@@ -31,15 +31,8 @@
 							</div>
 						</div>
 						<div class="tw-flex tw-flex-col tw-gap-2">
-							<!-- <oeb-button
-								[text]="'Micro Degree bearbeiten'"
-								width="full_width"
-								[routerLink]=learningPathEditLink
-								[class]="issuer.canCreateBadge ? 'tw-whitespace-nowrap tw-hidden md:tw-block' : 'disabled'"
-								>
-							</oeb-button> -->
 							<oeb-button
-								[text]="'LearningPath.deleteMd' | translate"
+								[text]="'General.delete' | translate"
 								variant="secondary"
 								width="full_width"
 								(click)="deleteLearningPath(learningPath.slug, issuer)"
@@ -50,26 +43,41 @@
 								"
 							>
 							</oeb-button>
+							<oeb-button
+								*ngIf="!learningPath.activated"
+								[text]="'General.edit' | translate"
+								width="full_width"
+								[routerLink]="learningPathEditLink"
+								[class]="
+									issuer.canCreateBadge ? 'tw-whitespace-nowrap tw-hidden md:tw-block' : 'disabled'
+								"
+							>
+							</oeb-button>
+							<span class="tw-italic tw-text-oebblack">{{
+								'LearningPath.notActivatedYet' | translate
+							}}</span>
 						</div>
 					</div>
 
 					<p hlmP>{{ learningPath.description }}</p>
 
-					<div class="tw-mt-4 md:tw-hidden">
-						<!-- <oeb-button
-							class="tw-whitespace-nowrap tw-mb-2"
-							[text]="'Micro Degree bearbeiten'"
-							width="full_width"
-							[routerLink]=learningPathEditLink
-							[disabled-when-requesting]="true"
-						></oeb-button> -->
+					<div class="tw-mt-4 md:tw-hidden tw-flex tw-flex-col tw-gap-4">
 						<oeb-button
 							class="tw-whitespace-nowrap"
-							[text]="'LearningPath.deleteMd' | translate"
+							[text]="'General.delete' | translate"
 							variant="secondary"
 							width="full_width"
 							[disabled-when-requesting]="true"
 						></oeb-button>
+						<oeb-button
+							*ngIf="!learningPath.activated"
+							class="tw-whitespace-nowrap tw-mb-2"
+							[text]="'General.edit' | translate"
+							width="full_width"
+							[routerLink]="learningPathEditLink"
+							[disabled-when-requesting]="true"
+						></oeb-button>
+						<span class="tw-italic tw-text-oebblack">{{ 'LearningPath.notActivatedYet' | translate }}</span>
 					</div>
 				</div>
 			</div>
