--- a/src/app/issuer/components/learningpath-edit-form/learningpath-edit-form.component.html
+++ b/src/app/issuer/components/learningpath-edit-form/learningpath-edit-form.component.html
@@ -432,13 +432,13 @@
 						<div
 							class="tw-bg-white tw-flex tw-justify-center tw-items-center tw-border-purple tw-border-solid tw-border tw-rounded-[10px] tw-min-w-[260px] tw-w-[260px] tw-h-[190px]"
 						>
-							<!-- <img
+							<img
 								class="md:tw-w-[145px] tw-w-[65px]"
-								[loaded-src]="lpImage"
+								[loaded-src]="currentImage"
 								[loading-src]="badgeLoadingImageUrl"
 								[error-src]="badgeFailedImageUrl"
 								width="38"
-							/> -->
+							/>
 						</div>
 						<div class="tw-flex tw-flex-col tw-gap-2">
 							<h3
