--- a/src/styles/oeb/oeb_styles.scss
+++ b/src/styles/oeb/oeb_styles.scss
@@ -1,4 +1,4 @@
-@import '@angular/cdk/overlay-prebuilt.css';
+@import "@angular/cdk/overlay-prebuilt.css";
 
 @tailwind base;
 @tailwind components;
@@ -29,6 +29,7 @@ html {
 	--color-lightpink: #fff6f6;
 	--color-lightgreen: #ecfeed;
 	--color-green: #93f993;
+	--color-mint: #e4ffe4;
 	--color-white: #ffffff;
 	--color-lightgray: #f5f5f5;
 	--color-darkgray: #6b6b6b;
@@ -39,7 +40,7 @@ html {
 	--color-link: #1400ff;
 
 	// spartan
-	--font-sans: '';
+	--font-sans: "";
 	--background: 0 0% 100%;
 	--foreground: 240 10% 3.9%;
 	--card: 0 0% 100%;
@@ -127,7 +128,7 @@ html {
 	border-top: none;
 	padding-top: calc(var(--gridspacing) * 12);
 	padding-bottom: calc(var(--gridspacing) * 12);
-	grid-area: 'footer';
+	grid-area: "footer";
 }
 
 .footer [href] {
@@ -177,7 +178,7 @@ html {
 
 .oeb-input-hide-arrows {
 	/* Hide arrows from input number - Firefox */
-	input[type='number'] {
+	input[type="number"] {
 		-moz-appearance: textfield;
 	}
 
@@ -192,7 +193,7 @@ html {
 .oeb-breadcrumbs {
 	margin-bottom: 24px;
 	padding-bottom: 16px;
-	border-bottom: 1px solid theme('colors.grey.85');
+	border-bottom: 1px solid theme("colors.grey.85");
 }
 
 .oeb-max-form-width {
