--- a/src/app/catalog/components/badge-catalog/badge-catalog.component.html
+++ b/src/app/catalog/components/badge-catalog/badge-catalog.component.html
@@ -94,11 +94,9 @@
 			</p>
 		</section>
 	</div>
-	<div class="oeb-section-sm">
+	<div #loadMore class="oeb-section-sm">
 		@if (hasNext()) {
-			<div #loadMore>
-				<loading-dots />
-			</div>
+			<loading-dots />
 		} @else {
 			<h4 hlmH4 class="tw-text-oebblack tw-text-center">{{ 'Badge.catalogAllLoaded' | translate }}</h4>
 			<h4 hlmH4 class="tw-font-black tw-text-purple tw-text-center">
