fix: lp image, public url

--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -193,6 +193,7 @@
 						[issuerTitle]="badge.issuerName ? badge.issuerName : badge.badge.issuer"
 						[badgeIssueDate]="badge.badge.createdAt"
 						[public]="true"
+						[publicUrl]="`../../public/badges/${badge.badge.slug}`"
 					></bg-badgecard>
 				</div>
 			</ng-container>
