--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -236,6 +236,7 @@
 								[requested]="lp.requested"
 								[progress]="lp.progress"
 								[matchOrProgress]="undefined"
+								[badgeImage]="$any(lp).image"
 							></bg-learningpathcard>
 						</div>
 					</ng-container>
