feat: disable step button when saving

--- a/src/app/issuer/components/learningpath-edit-form/learningpath-edit-form.component.html
+++ b/src/app/issuer/components/learningpath-edit-form/learningpath-edit-form.component.html
@@ -523,6 +523,9 @@
 				type="button"
 				[text]="previous"
 				(click)="previousStep()"
+				[disabled]="!!savePromise"
+				[class.disabled]="!!savePromise"
+				[disabled-when-requesting]="true"
 			>
 			</oeb-button>
 
