--- a/src/app/common/components/learningpath-detail/oeb-learning-path.component.html
+++ b/src/app/common/components/learningpath-detail/oeb-learning-path.component.html
@@ -29,17 +29,24 @@
 									{{ tag }}
 								</div>
 							</div>
+							<p
+								class="tw-text-lg tw-text-purple tw-italic"
+								hlmP
+								[innerHTML]="
+									'LearningPath.studentsMustEarn'
+										| translate
+											: {
+													count_required: learningPath.required_badges_count,
+													count_total: learningPath.badges.length
+											  }
+								"
+							></p>
+
+							<p class="tw-text-lg" hlmP>{{ learningPath.description }}</p>
 						</div>
 						<div class="tw-flex tw-flex-col tw-gap-2">
-							<!-- <oeb-button
-								[text]="'Micro Degree bearbeiten'"
-								width="full_width"
-								[routerLink]=learningPathEditLink
-								[class]="issuer.canCreateBadge ? 'tw-whitespace-nowrap tw-hidden md:tw-block' : 'disabled'"
-								>
-							</oeb-button> -->
 							<oeb-button
-								[text]="'LearningPath.deleteMd' | translate"
+								[text]="'General.delete' | translate"
 								variant="secondary"
 								width="full_width"
 								(click)="deleteLearningPath(learningPath.slug, issuer)"
@@ -50,26 +57,61 @@
 								"
 							>
 							</oeb-button>
+							<div *ngIf="!learningPath.activated">
+								<oeb-button
+									[text]="'General.edit' | translate"
+									width="full_width"
+									[routerLink]="learningPathEditLink"
+									[class]="
+										issuer.canCreateBadge
+											? 'tw-whitespace-nowrap tw-hidden md:tw-block'
+											: 'disabled'
+									"
+								>
+								</oeb-button>
+								<p class="tw-italic tw-text-oebblack">
+									<span>{{ 'LearningPath.notActivatedYetStart' | translate }}</span>
+									<a
+										class="tw-underline tw-text-link"
+										[routerLink]="[`/issuer/issuers/${issuer.slug}/learningpaths/${learningPath.slug}/edit`]"
+										[queryParams]="{ focusActivation: true }"
+									>
+										{{ 'LearningPath.notActivatedYetLink' | translate }}</a
+									>
+									<span>{{ 'LearningPath.notActivatedYetEnd' | translate }}</span>
+								</p>
+							</div>
 						</div>
 					</div>
 
-					<p hlmP>{{ learningPath.description }}</p>
-
-					<div class="tw-mt-4 md:tw-hidden">
-						<!-- <oeb-button
-							class="tw-whitespace-nowrap tw-mb-2"
-							[text]="'Micro Degree bearbeiten'"
-							width="full_width"
-							[routerLink]=learningPathEditLink
-							[disabled-when-requesting]="true"
-						></oeb-button> -->
+					<div class="tw-mt-4 md:tw-hidden tw-flex tw-flex-col tw-gap-4">
 						<oeb-button
 							class="tw-whitespace-nowrap"
-							[text]="'LearningPath.deleteMd' | translate"
+							[text]="'General.delete' | translate"
 							variant="secondary"
 							width="full_width"
 							[disabled-when-requesting]="true"
 						></oeb-button>
+						<div *ngIf="!learningPath.activated">
+							<oeb-button
+								class="tw-whitespace-nowrap tw-mb-2"
+								[text]="'General.edit' | translate"
+								width="full_width"
+								[routerLink]="learningPathEditLink"
+								[disabled-when-requesting]="true"
+							></oeb-button>
+							<p class="tw-italic tw-text-oebblack">
+								<span>{{ 'LearningPath.notActivatedYetStart' | translate }}</span>
+								<a
+									class="tw-underline tw-text-link"
+									[routerLink]="[`/issuer/issuers/${issuer.slug}/learningpaths/${learningPath.slug}/edit`]"
+									[queryParams]="{ focusActivation: true }"
+								>
+									{{ 'LearningPath.notActivatedYetLink' | translate }}</a
+								>
+								<span>{{ 'LearningPath.notActivatedYetEnd' | translate }}</span>
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
