--- a/src/app/common/components/badge-detail/badge-detail.component.html
+++ b/src/app/common/components/badge-detail/badge-detail.component.html
@@ -346,7 +346,7 @@
 							<bg-learningpathcard
 								*ngFor="let lp of getLearningPaths()"
 								[name]="lp.name"
-								[badgeImage]="lp.image"
+								[badgeImage]="$any(lp).participationBadge_image"
 								[issuerTitle]="lp.issuer_name"
 								[description]="lp.description"
 								[slug]="lp.slug"
