fix: lp image, public url (#1441)
* fix: lp image, public url

* fix: lp image

* fix: more learningpath images

---------

Co-authored-by: David Scheidt <scheidtdav@users.noreply.github.com>

--- a/src/app/common/components/issuer/oeb-issuer-detail.component.html
+++ b/src/app/common/components/issuer/oeb-issuer-detail.component.html
@@ -193,6 +193,7 @@
 						[issuerTitle]="badge.issuerName ? badge.issuerName : badge.badge.issuer"
 						[badgeIssueDate]="badge.badge.createdAt"
 						[public]="true"
+						[publicUrl]="`../../public/badges/${badge.badge.slug}`"
 					></bg-badgecard>
 				</div>
 			</ng-container>
@@ -235,6 +236,7 @@
 								[requested]="lp.requested"
 								[progress]="lp.progress"
 								[matchOrProgress]="undefined"
+								[badgeImage]="$any(lp).image"
 							></bg-learningpathcard>
 						</div>
 					</ng-container>
